# T-IOT-902-Back-End

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
backend/: Cargo.toml  Dockerfile
backend/src/: data_generator.rs  influxdb_client.rs  main.rs
backend/src/routes/: dust.rs  humidity.rs  sound.rs
grafana/provisioning/dashboards/: dashboards.yml  iot-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
influxdb/config/: influx-configs
src/: main.rs
src/routes/: dust.rs  humidity.rs  mod.rs  sound.rs
