[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-multipart = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4"
influxdb2 = "0.4"
lazy_static = "1.4.0"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"